--- a/.gitignore
+++ b/.gitignore
@@ -112,7 +112,7 @@ pip-selfcheck.json
 .idea/dictionaries
 .idea/vcs.xml
 .idea/jsLibraryMappings.xml
-
+.idea/
 # Sensitive or high-churn files:
 .idea/dataSources.ids
 .idea/dataSources.xml
